# llms-fast-learn

./: .gitignore  README.md  pyproject.toml
cours/: README.md
entretiens/: README.md
notebooks/: 01_tokenisation.ipynb  02_embeddings.ipynb
