[project]
name = "llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "transformers>=5.1.0",
    "tokenizers>=0.22.2",
    "sentencepiece>=0.2.1",
    "jupyter>=1.1.1",
    "torch>=2.10.0",
    "tiktoken>=0.12.0",
    "gensim>=4.4.0",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
]
